# ciclometricas_desktop

./: .gitignore  README.md  acwr_chart_debug.py  acwr_module.py  build_exe.bat  ciclometricas.spec  installer.iss  main.py  pyproject.toml  requirements.txt
calc/: __init__.py  activity_metrics.py  climbs.py  cp_model.py  durability.py  fatigue_resistance.py  fitness.py  ftp_estimator.py  intervals.py  mmp.py  monotony.py  pdc_fatigue.py  power.py  quadrant_analysis.py  race_readiness.py  recovery.py  wbal.py  zones.py
db/: __init__.py  athlete_manager.py  engine.py  models.py
parsers/: __init__.py  fit_parser.py  tcx_parser.py  types.py
services/: import_service.py  strava_service.py
tests/: conftest.py  test_calc_activity_metrics.py  test_calc_cp_model.py  test_calc_fatigue_resistance.py  test_calc_fitness.py  test_calc_ftp_estimator.py  test_calc_intervals.py  test_calc_mmp.py  test_calc_monotony.py  test_calc_power.py  test_calc_quadrant_analysis.py  test_calc_race_readiness.py  test_calc_recovery.py  test_calc_wbal.py  test_calc_zones.py  test_db_models.py  test_import_service.py  test_parsers.py  test_time_series_chart.py  test_views.py
ui/: athlete_dialog.py  dialogs.py  main_window.py  theme.py
ui/charts/: __init__.py  chart_utils.py  route_map.py  time_series_chart.py
ui/views/: __init__.py  activities_view.py  activity_detail_view.py  dashboard_view.py  durability_view.py  fatigue_resistance_view.py  health_view.py  import_view.py  monotony_view.py  readiness_view.py  recovery_view.py  settings_view.py  summary_view.py
ui/widgets/: __init__.py  alert_banner.py  manual_session_dialog.py  stat_card.py
