[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ciclometricas"
version = "2.0.0"
description = "Análisis avanzado de rendimiento en ciclismo — aplicación de escritorio"
authors = [
    { name = "Juan Carlos López San Joaquín" },
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cycling", "power", "FTP", "critical-power", "training", "strava"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "fitdecode>=0.10",
    "lxml>=5.1",
    "PySide6>=6.6",
    "PySide6-Addons>=6.6",
    "pyqtgraph>=0.13",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
]

[project.scripts]
ciclometricas = "main:main"

[project.urls]
Homepage = "https://ciclometricas.abacusai.app"
Repository = "https://github.com/juancar1lo/ciclometricas"
Issues = "https://github.com/juancar1lo/ciclometricas/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["calc*", "db*", "parsers*", "services*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
